--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
+    "@playwright/test": "^1.34.3",
     "@swc/core": "^1.3.59",
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
