--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "e2e": "npm run build -- -m development && npm run preview -- --port 5173 & BASE_URL=http://localhost:5173 npx playwright test"
+    "e2e": "npm run build -- -m development && npm run preview -- --port 5175 & BASE_URL=http://localhost:5175 npx playwright test"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.22",
     "babel-jest": "^29.5.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -44,7 +45,9 @@
     "jest-environment-jsdom": "^29.5.0",
     "miragejs": "^0.1.47",
     "msw": "^1.2.1",
+    "postcss": "^8.5.6",
     "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.4.18",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2",
