--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "e2e": "npm run build -- -m development && npm run preview -- --port 5175 & BASE_URL=http://localhost:5175 npx playwright test"
+    "e2e": "npm run build -- -m development && npm run preview -- --port 5175 & BASE_URL=http://localhost:5175 npx playwright test",
+    "dev:server": "tsx watch server/index.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@types/lodash": "^4.14.194",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "fast-glob": "^3.3.3",
     "jotai": "^2.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -30,6 +34,8 @@
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -50,6 +56,7 @@
     "tailwindcss": "^3.4.18",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-plugin-checker": "^0.6.0",
